--- a/M2_13.md
+++ b/M2_13.md
@@ -27,7 +27,7 @@ class _MyAppState extends State<MyApp> {
       ),
       darkTheme: ThemeData(
         brightness: Brightness.dark,
-        primarySwatch: Colors.purple,
+        primarySwatch: Colors.teal,
       ),
       themeMode: isDark ? ThemeMode.dark : ThemeMode.light,
       title: 'Flutter App!!',
@@ -35,18 +35,32 @@ class _MyAppState extends State<MyApp> {
       appBar: AppBar(
         title: Text("Prac 13"),
       ),
-      body: Container(
-        height: 200,
-        width: 300,
-        color: Colors.teal,
-        child: Switch(
-          value: isDark,
-          onChanged: (v){
-            setState(() {
-              isDark = v; 
-            });
-          },
-        )
+      body: Column(
+        mainAxisAlignment: MainAxisAlignment.center,
+        children: [
+          Center(
+            child: Container(
+              height: 200,
+              width: 300,
+              color: Colors.teal,
+              child: Row(
+                mainAxisAlignment: MainAxisAlignment.center,
+                children: [
+                  Icon(Icons.light_mode),
+                  Switch(
+                    value: isDark,
+                    onChanged: (v){
+                      setState(() {
+                        isDark = v; 
+                      });
+                    },
+                  ),
+                  Icon(Icons.dark_mode),
+                ],
+              )
+            ),
+          ),
+        ],
       ),
     )
     );
